# SchizoNetwork

./: .gitignore  CMakeLists.txt
src/: main.c
src/algorithms/RC6/: RC6.c  RC6.h
src/algorithms/RSA/: RSA.c  RSA.h
src/cli/: cli.c  cli.h
src/commons/: app_defines.h  data_types.h
src/communication/: communication_commons.c  communication_commons.h
src/communication/client/: client.c  client.h
src/communication/handshake/: handshake.c  handshake.h
src/communication/server/: server.c  server.h
src/tests/RC6/: test_cases.c  test_cases.h  test_main.c
